This file describes the new features in each poezio release.
For more detailed changelog, see the roadmap:
http://dev.louiz.org/project/poezio/roadmap

* Poezio 0.7.2 - dev
- Chatstate notifications (in private AND in MUCs)
- /message command to talk to any JID
- Multiline edition

* Poezio 0.7.1 - 2 Feb 2010
- /status command to globally change the status
- /win command now accepts part of tab name as argument
- bugfixes

* Poezio 0.7 - 14 jan 2010
Codename ”Koshie & Mathieui”
- Library changed from xmpppy to SleekXMPP
- Python 3 only
- Introduce the roster
- One to one conversations
- Roster search
- Add/remove/accept/deny contact in the roster
- Resizable mini-buffer displaying various informations
- All colors can be changed with a theme file
- Command auto-completion
- /say and // commands
- /recolor command, changing the nick's colors in a MUC
- /list command lets the user browse the MUCs on a server
- Warn user about publicly logged rooms
- Possibility to limit the number of history messages received from MUC
- auto-rejoin when kicked from a MUC
- The number of lines available to scroll down is displayed
- Possibility to use a modified nickname automatically when a nick is reserved
- A line separates the alread-read messages from the new messages
- Information messages are more colored
- Man page added
- bugfixes


* Poezio 0.6.2 - 21 Jul 2010
- Lines are now broken between words and not in the middle of them
- /unquery command
- default nickname is now $USER
- Server on /join command can be omitted
- /query command can now take a message in parameters
- logs are now save in $XDG_DATA_HOME and this can be configured
- Available users now have a greater priority on nickname completion
- utf-8 characters (from the keyboard) are now completely supported
- Many new keyboard shortcuts (move the cursor, edit the line, switch tabs...)
- DESTDIR support in Makefile is fixed
- Completion on recently said words