@@ -5,6 +5,7 @@ http://dev.louiz.org/project/poezio/roadmap
 * Poezio 0.7.2 - dev
 - Chatstate notifications (in private AND in MUCs)
 - /message command to talk to any JID
+- /version command to get the software version of an entity
 - Multiline edition
 
 * Poezio 0.7.1 - 2 Feb 2010
